[tool.poetry]
name = "httporchestrator"
version = "v4.3.5"
description = "HTTP workflow orchestration engine."
license = "Apache-2.0"
readme = "httporchestrator/README.md"
authors = ["debugtalk <debugtalk@gmail.com>"]

repository = "https://github.com/httprunner/httprunner"

keywords = ["HTTP", "apitest", "requests"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = ">=2.0"
loguru = ">=0.6"
httpx = ">=0.27"
allure-pytest = {version = ">=2.8", optional = true}

[tool.poetry.extras]
allure = ["allure-pytest"]

[tool.poetry.dev-dependencies]
pytest = ">=7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
